Fixing no margin blockquotes on mobile

--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -699,7 +699,8 @@ table.wiki-content-table tr {
 
 	blockquote,
 	.blockquote {
-		margin: 0;
+		margin-left: 0;
+		margin-right: 0;
 	}
 
 	.curved {
