--- a/src/css/int/chn/black-highlighter_ch.css
+++ b/src/css/int/chn/black-highlighter_ch.css
@@ -1277,7 +1277,7 @@
 
         blockquote,
         .blockquote {
-            margin: 1em 0;
+            margin: 0.75em 0;
         }
 
         .license-area {
