--- a/src/css/main.css
+++ b/src/css/main.css
@@ -862,7 +862,7 @@ div.buttons.alignleft {
 
 	blockquote,
 	.blockquote {
-		margin: 1em 0;
+		margin: 0.75em 0;
 	}
 
 	.license-area {
